@@ -322,7 +322,7 @@ rb_method_entry_make(VALUE klass, ID mid, rb_method_type_t type,
     me->flag = NOEX_WITH_SAFE(noex);
     me->mark = 0;
     me->called_id = mid;
-    OBJ_WRITE(klass, &me->klass, defined_class);
+    RB_OBJ_WRITE(klass, &me->klass, defined_class);
     me->def = def;
 
     if (def) {
@@ -330,13 +330,13 @@ rb_method_entry_make(VALUE klass, ID mid, rb_method_type_t type,
 
 	switch(def->type) {
 	  case VM_METHOD_TYPE_ISEQ:
-	    OBJ_WRITTEN(klass, Qundef, def->body.iseq->self);
+	    RB_OBJ_WRITTEN(klass, Qundef, def->body.iseq->self);
 	    break;
 	  case VM_METHOD_TYPE_IVAR:
-	    OBJ_WRITTEN(klass, Qundef, def->body.attr.location);
+	    RB_OBJ_WRITTEN(klass, Qundef, def->body.attr.location);
 	    break;
 	  case VM_METHOD_TYPE_BMETHOD:
-	    OBJ_WRITTEN(klass, Qundef, def->body.proc);
+	    RB_OBJ_WRITTEN(klass, Qundef, def->body.proc);
 	    break;
 	  default:;
 	    /* ignore */
@@ -438,7 +438,7 @@ rb_add_method(VALUE klass, ID mid, rb_method_type_t type, void *opts, rb_method_
       case VM_METHOD_TYPE_ISEQ: {
 	  rb_iseq_t *iseq = (rb_iseq_t *)opts;
 	  *(rb_iseq_t **)&def->body.iseq = iseq;
-	  OBJ_WRITTEN(klass, Qundef, iseq->self);
+	  RB_OBJ_WRITTEN(klass, Qundef, iseq->self);
 	  break;
       }
       case VM_METHOD_TYPE_CFUNC:
@@ -450,16 +450,16 @@ rb_add_method(VALUE klass, ID mid, rb_method_type_t type, void *opts, rb_method_
       case VM_METHOD_TYPE_ATTRSET:
       case VM_METHOD_TYPE_IVAR:
 	def->body.attr.id = (ID)opts;
-	OBJ_WRITE(klass, &def->body.attr.location, Qfalse);
+	RB_OBJ_WRITE(klass, &def->body.attr.location, Qfalse);
 	th = GET_THREAD();
 	cfp = rb_vm_get_ruby_level_next_cfp(th, th->cfp);
 	if (cfp && (line = rb_vm_get_sourceline(cfp))) {
 	    VALUE location = rb_ary_new3(2, cfp->iseq->location.path, INT2FIX(line));
-	    OBJ_WRITE(klass, &def->body.attr.location, rb_ary_freeze(location));
+	    RB_OBJ_WRITE(klass, &def->body.attr.location, rb_ary_freeze(location));
 	}
 	break;
       case VM_METHOD_TYPE_BMETHOD:
-	OBJ_WRITE(klass, &def->body.proc, (VALUE)opts);
+	RB_OBJ_WRITE(klass, &def->body.proc, (VALUE)opts);
 	break;
       case VM_METHOD_TYPE_NOTIMPLEMENTED:
 	setup_method_cfunc_struct(&def->body.cfunc, rb_f_notimplement, -1);
